...
        app:layout_constraintBottom_toBottomOf="@+id/img_artist"
        app:layout_constraintEnd_toEndOf="@+id/img_artist"
        app:layout_constraintStart_toStartOf="@+id/img_artist"
        app:layout_constraintTop_toTopOf="@+id/img_artist" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_artist_follow"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:visibility="gone"
        android:src="@drawable/ic_follow_artist" />

...
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/popular_songs"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/recycler_view_artist_popular_songs"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_artist_no_songs_to_show"
                android:layout_width="wrap_content"
...
